--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -25,14 +25,20 @@
     <ClInclude Include="..\include\gf2d_text.h" />
     <ClInclude Include="..\include\gf2d_types.h" />
     <ClInclude Include="..\include\gf2d_vector.h" />
+    <ClInclude Include="..\include\g_entity.h" />
+    <ClInclude Include="..\include\g_player.h" />
     <ClInclude Include="..\include\simple_logger.h" />
+    <ClInclude Include="g_entity.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\entity_collisions.c" />
     <ClCompile Include="..\src\game.c" />
     <ClCompile Include="..\src\gf2d_draw.c" />
     <ClCompile Include="..\src\gf2d_graphics.c" />
     <ClCompile Include="..\src\gf2d_sprite.c" />
     <ClCompile Include="..\src\gf2d_vector.c" />
+    <ClCompile Include="..\src\g_entity.c" />
+    <ClCompile Include="..\src\g_player.c" />
     <ClCompile Include="..\src\simple_logger.c" />
   </ItemGroup>
   <ItemGroup>
